--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.55.0",
+    "@aws-sdk/client-sso": "^3.58.0",
     "@aws-sdk/credential-provider-ini": "^3.58.0",
     "@aws-sdk/credential-provider-node": "^3.55.0",
     "@aws-sdk/credential-providers": "^3.58.0",
@@ -15,7 +16,8 @@
     "aws-sdk": "^2.1106.0",
     "axios": "^0.26.1",
     "uuid": "^8.3.2",
-    "vue": "^3.2.31"
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
